integrando metodo post en el api-client

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
         <h1>Mis tarea</h1>
         <nav>
             <a href="">Inicio</a>
-            <a href="">crear tareas</a>
+            <a href="./src/features/create-task/create-task.html">crear tareas</a>
             <a href="">pendiente</a>
         </nav>
     </header>
+
+    <div id="tasks" class="task-container">
+
+    </div>
 
     <script type="module" src="./src/features/main/app.js"></script>
 </body>
